vlib/v/checker/tests/match_mut_with_immutable_var_err.vv
type Int = int | u8

fn main() {
	i := Int(0)
	match mut i {
		int { i = 1 }
		u8 { i = 2 }
	}
	println(i)
}
